crates/keron-lang/tests/corpus/errors/check/pattern_guard_non_boolean.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: `match` arm guard must be `Boolean`, found `String`
  --> 2:14
  |
2 |   "Macos" if "yes" => "mac",
  |              ^^^^^
